<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_markets"
        android:icon="@drawable/ic_markets"
        android:title="@string/markets" />
    <item
        android:id="@+id/nav_watchlist"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/watchlist" />
    <item
        android:id="@+id/nav_bets"
        android:icon="@drawable/ic_bets"
        android:title="@string/my_bets" />
    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/leaderboard" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
